# paperbanana

./: .env.example  README.md  pyproject.toml
.github/workflows/: ci.yml
mcp_server/: README.md  server.py
paperbanana/: cli.py
paperbanana/agents/: structurer.py  visualizer.py
paperbanana/core/: batch.py  config.py  cost_estimator.py  pdf_text.py  pipeline.py  source_loader.py  types.py
paperbanana/evaluation/: benchmark.py  prompt_ablation.py
paperbanana/guidelines/: methodology.py  plots.py
paperbanana/providers/: registry.py
paperbanana/providers/image_gen/: google_imagen.py
paperbanana/providers/vlm/: bedrock.py  gemini.py
paperbanana/studio/: __init__.py  app.py  runner.py  runs.py
paperbanana/vector/: __init__.py  graphviz_render.py
tests/: test_batch.py  test_cli.py  test_config.py  test_features.py  test_studio.py  test_venue.py
tests/test_agents/: test_visualizer.py
tests/test_core/: test_pdf_extract.py  test_pdf_pages_spec.py
tests/test_evaluation/: test_benchmark.py  test_prompt_ablation.py
tests/test_pipeline/: test_output_format.py  test_progress_callback.py  test_types.py
tests/test_providers/: test_registry.py
tests/test_vector/: test_vector_graphviz_ir.py
